--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -17,6 +17,10 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: List files
+        run: |
+          git ls-files
+
       - name: Optimize map
         uses: AlsaceDigitale/map-optimizer-action@master
 
@@ -32,6 +36,8 @@ jobs:
           SSH: true
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: . # The folder the action should deploy.
+          SINGLE_COMMIT: true
+          PRESERVE: true
 
       - name: Post PR comment
         uses: mshick/add-pr-comment@v1
